[package]
name = "ecosystem"
version = "0.1.0"
authors = ["okqin <jiqin@outlook.com>"]
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.86"
once_cell = "1.19.0"
opentelemetry = "0.23.0"
opentelemetry-otlp = { version = "0.16.0", features = ["tonic"] }
opentelemetry-semantic-conventions = "0.15.0"
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio"] }
snafu = "0.8.3"
thiserror = "1.0.61"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.24.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
chrono = "0.4.38"
derive_builder = "0.20.0"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "rt"] }
